--- a/.env
+++ b/.env
@@ -42,4 +42,5 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/symfony5_blog?serverVersion=10.4.22-M
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 MAILER_DSN=smtp://localhost:1025
+#MAILER_DSN=smtp://6fc3691881f5ff:c75555b89fec2b@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
 ###< symfony/mailer ###
