--- a/.env
+++ b/.env
@@ -15,6 +15,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
+#APP_ENV=prod
 APP_SECRET=73383ef609718e21944d3dc157b796b4
 ###< symfony/framework-bundle ###
 
