ajout et config bundle JWT

--- a/.env
+++ b/.env
@@ -45,3 +45,13 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/symfony5_blog?serverVersion=10.4.22-M
 MAILER_DSN=smtp://localhost:1025
 #MAILER_DSN=smtp://6fc3691881f5ff:c75555b89fec2b@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
 ###< symfony/mailer ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=47d78d87d031fb76a3227a43db4e541a
+###< lexik/jwt-authentication-bundle ###
